--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,58 @@
-build
-.idea
+##########################
+## Java
+##########################
+*.class
+.mtj.tmp/
+*.jar
+
+##########################
+## Maven
+##########################
+target/**
+test-output/**
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+
+##########################
+## Gradle
+##########################
 .gradle
+
+##########################
+## IntelliJ
+##########################
+*.iml
+.idea/
+*.ipr
+*.iws
+out/
+.idea_modules/
+
+##########################
+## Eclipse
+##########################
+.metadata
+.classpath
+.project
+.settings/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.loadpath
+
+##########################
+## NetBeans
+##########################
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
